public class Cliente {

    public static void main(String[] args) {
        Restaurante simulacion = new Restaurante();

        simulacion.iniciar();
    }
}